# mat-utils

./: .gitignore  CMakeLists.txt  main.cpp  read_mat.cpp
examples/: CMakeLists.txt  example.cpp
include/: mat_reader.h  suitesparse_matrix.h
include/mat_utils/: mat_reader.h  mat_writer.h
lib/: CMakeLists.txt  mat_reader.cpp  mat_writer.cpp  suitesparse_matrix.cpp
test/: CMakeLists.txt  mat_reader_test.cpp
